Implemented untested login logic